--- a/Back/package.json
+++ b/Back/package.json
@@ -11,7 +11,11 @@
   "author": "Bryan",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mysql2": "^3.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
