--- a/Front/frontMusic/package.json
+++ b/Front/frontMusic/package.json
@@ -14,13 +14,13 @@
     "@mui/material": "^5.11.8",
     "@mui/styled-engine-sc": "^5.11.0",
     "axios": "^1.3.2",
-    "framer-motion": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.8.0",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "swiper": "^9.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
