--- a/Front/frontMusic/package.json
+++ b/Front/frontMusic/package.json
@@ -23,6 +23,7 @@
     "swiper": "^9.0.4"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.5.1",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
