--- a/Back/package.json
+++ b/Back/package.json
@@ -11,10 +11,12 @@
   "author": "Bryan",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.4",
     "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.1.0"
   },
