--- a/Front/frontMusic/package.json
+++ b/Front/frontMusic/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.11.8",
     "@mui/styled-engine-sc": "^5.11.0",
     "axios": "^1.3.2",
+    "classnames": "^2.3.2",
     "jquery": "^3.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
