--- a/Front/frontMusic/package.json
+++ b/Front/frontMusic/package.json
@@ -15,6 +15,7 @@
     "@mui/styled-engine-sc": "^5.11.0",
     "axios": "^1.3.2",
     "classnames": "^2.3.2",
+    "formik": "^2.4.0",
     "jquery": "^3.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,7 +23,8 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.8.0",
     "styled-components": "^5.3.6",
-    "swiper": "^9.0.4"
+    "swiper": "^9.0.4",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
