--- a/Front/frontMusic/package.json
+++ b/Front/frontMusic/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.8.0",
     "styled-components": "^5.3.6",
     "swiper": "^9.0.4",
+    "uuid": "^9.0.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
