--- a/Back/package.json
+++ b/Back/package.json
@@ -12,12 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.4",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.1.0"
   },
   "devDependencies": {
